--- a/Views/Propietario/Detalles.cshtml
+++ b/Views/Propietario/Detalles.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<div class="container justify-content-center bg-secondary col-6" >
+<div class="container justify-content-center  col-6"  id ="table">
     <h4 class="text-center">Detalles del propietario</h4>
     <hr />
     <dl class="row ">
