--- a/Views/Propietario/Index.cshtml
+++ b/Views/Propietario/Index.cshtml
@@ -52,7 +52,7 @@
                 <td>
                     <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
                     <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
-                    <a asp-action="Eliminar" asp-route-id=@item.Id><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
+                    <a href="#"onclick="eliminar('@item.Id', '@item.Nombre')" ><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
                   
                   
                 </td>
@@ -60,3 +60,33 @@
         }
     </tbody>
 </table>
+
+<form class="modal" tabindex="-1" asp-action="Eliminar" id="modal_eliminar_propietario">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">DESEAS ELIMINAR A:</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" name="Id" value="" id ="propietario_eliminar_id">
+        <p><span id="propietario_eliminar_nombre"></span></p>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-danger" >Eliminar</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Salir</button>
+      </div>
+    </div>
+  </div>
+</form>
+@section Scripts{
+    <script>
+        function eliminar(id, nombre){
+            document.querySelector("#propietario_eliminar_id").value = id;
+            document.querySelector("#propietario_eliminar_nombre").innerHTML = nombre;
+            $("#modal_eliminar_propietario").modal("show");
+        }
+    </script>
+}
