--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Propietario" asp-action="Index">Propietario</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Propietario" asp-action="Index">Propietarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Inquilino" asp-action="Index">Inquilinos</a>
                         </li>
                     </ul>
                 </div>
