--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,6 +39,12 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @if(ViewBag.Mensaje != null)
+            {
+                <div class="alert alert-info">
+                    @ViewBag.Mensaje
+                </div>
+            }
             @RenderBody()
         </main>
     </div>
