--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -62,7 +62,7 @@
     </tbody>
 </table>
 
-<form class="modal" tabindex="-1" asp-action="Eliminar" id="modal_eliminar_Contrato">
+<form class="modal" tabindex="-1" asp-action="Eliminar" id="modal_eliminar_Pago">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -72,8 +72,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <input type="hidden" name="Id" value="" id ="Contrato_eliminar_id">
-        <p><span id="Contrato_eliminar_id"></span></p>
+        <input type="hidden" name="Id" value="" id ="Pago_eliminar_id">
+        <p><span id="Pago_eliminar_id"></span></p>
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-danger" >Eliminar</button>
@@ -88,7 +88,7 @@
         function eliminar(id){
             document.querySelector("#Contrato_eliminar_id").value = id;
             document.querySelector("#Contrato_eliminar_id").innerHTML = id;
-            $("#modal_eliminar_Contrato").modal("show");
+            $("#modal_eliminar_Pago").modal("show");
         }
     </script>
 }
