--- a/Views/Inquilino/editar.cshtml
+++ b/Views/Inquilino/editar.cshtml
@@ -15,7 +15,7 @@
         <form asp-action="Guardar" method="post" class="row g-3">
              <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group col-4">
-                <label  class="control-label">CODIGO</label>
+                <label  class="control-label">CÓDIGO</label>
                 <input name="Id" class="form-control"  value="@id" readonly/>             
             </div>
              <div class="form-group col-4">
