--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,10 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Inmueble" asp-action="Index">Inmuebles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Contrato" asp-action="Index">Contrato</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contrato" asp-action="Index">Contratos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Pago" asp-action="Index">Pagos</a>
                         </li>
                     </ul>
                 </div>
