--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -10,6 +10,9 @@
 <p>
     <a asp-action="Editar"method = "post">CREAR NUEVO </a>
 </p>
+<p>
+    <a asp-action="VerDisp"> Ver inmuebles disponibles </a>
+</p>
 <form asp-action="Index">
     <p>
         Buscar: <input type="text" name="buscar" class="form-text" />
