--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -5,24 +5,24 @@
     ViewData["Title"] = "Index";
 }
 
-<h4> Listado  de Inmuebles</h4>
+<h4> Listado de Inmuebles</h4>
 
 <p>
-    <a asp-action="Editar"method = "post">CREAR NUEVO </a>
+    <a asp-action="Editar" method="post">CREAR NUEVO </a>
 </p>
 <p>
     <a asp-action="VerDisp"> Ver inmuebles disponibles </a>
 </p>
-<form asp-action="Index">
+<form asp-action="BuscarPropietarios" method="get">
     <p>
-        Buscar: <input type="text" name="buscar" class="form-text" />
-        <input type="submit" value="buscar" class="btn btn-dark" >
+        Buscar propietario: <input type="text" name="buscar" class="form-text" />
+        <input type="submit" value="Buscar" class="btn btn-dark" />
     </p>
 </form>
 <table class="table" id="table">
-    <thead> 
+    <thead>
         <tr>
-            <th >
+            <th>
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
@@ -34,8 +34,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.Disponible)
             </th>
-             <th>
-               ACCIONES
+            <th>
+                ACCIONES
             </th>
         </tr>
     </thead>
@@ -52,16 +52,19 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Uso)
                 </td>
-              
+
                 <td>
                     @Html.DisplayFor(modelItem => item.Disponible)
                 </td>
-                
-               
+
+
                 <td>
-                    <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
-                    <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
-                    <a href="#"onclick="eliminar('@item.Id', '@item.Direccion')" ><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
+                    <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;"
+                            id="detalles"></i></a>
+                    <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;"
+                            id="edi"></i></a>
+                    <a href="#" onclick="eliminar('@item.Id', '@item.Direccion')"><i class="fa fa-trash "
+                            style="font-size:25px;" id="eli"></i></a>
                 </td>
             </tr>
         }
@@ -69,29 +72,29 @@
 </table>
 
 <form class="modal" tabindex="-1" asp-action="Eliminar" id="modal_eliminar_Domicilio">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">DESEAS ELIMINAR A:</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <input type="hidden" name="Id" value="" id ="Domicilio_eliminar_id">
-        <p><span id="Domicilio_eliminar_nombre"></span></p>
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-danger" >Eliminar</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Salir</button>
-      </div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">DESEAS ELIMINAR A:</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" name="Id" value="" id="Domicilio_eliminar_id">
+                <p><span id="Domicilio_eliminar_nombre"></span></p>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-danger">Eliminar</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Salir</button>
+            </div>
+        </div>
     </div>
-  </div>
 </form>
 
-@section Scripts{
+@section Scripts {
     <script>
-        function eliminar(id, nombre){
+        function eliminar(id, nombre) {
             document.querySelector("#Domicilio_eliminar_id").value = id;
             document.querySelector("#Domicilio_eliminar_nombre").innerHTML = nombre;
             $("#modal_eliminar_Domicilio").modal("show");
