Listar contratos vigentes

--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -8,6 +8,9 @@
 <p>
     <a asp-action="Editar"method = "post">CREAR NUEVO </a>
 </p>
+<p>
+    <a asp-action="VerVigentes">Ver contratos vigentes</a>
+</p>
 <form asp-action="Index">
     <p>
         Buscar: <input type="text" name="buscar" class="form-text" />
