--- a/Views/Home/Loguin.cshtml
+++ b/Views/Home/Loguin.cshtml
@@ -1,8 +1,7 @@
-@model Usuario;
+@model Log;
 @{
     Layout = null;
 }
-
 <!DOCTYPE html>
 
 <html>
@@ -14,10 +13,10 @@
 <body>
     <div class="row mt-5">
         <div class=" col-sm-4 offset-sm-4">
-            <form asp-action="Index" method="post">
+            <form asp-action="Loguin" asp-controller="Usuario" method="post">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
-                    <input type="email" class="form-control" asp-for="Correo">
+                    <input type="email" class="form-control" asp-for="Usuario">
                     
                 </div>
                 <div class="mb-3">
