--- a/Views/Usuario/Detalles.cshtml
+++ b/Views/Usuario/Detalles.cshtml
@@ -1,13 +1,15 @@
-@model PROYECTO_BRUNO_SOAZO.Models.Propietario;
+@model Usuario;
 
 @{
     ViewData["Title"] = "Details";
 }
 
+
+
 <div class="container justify-content-center  col-6"  id ="table">
-    <h4 class="text-center">Detalles del propietario</h4>
+    <h4 class="text-center">Detalles del Usuario</h4>
     <hr />
-    <dl class="row ">
+     <dl class="row ">
         <dt class = "col-6 " >
             @Html.DisplayNameFor(model => model.Id)
         </dt>
@@ -27,29 +29,23 @@
             @Html.DisplayFor(model => model.Apellido)
         </dd>
         <dt class = "col-6 ">
-            @Html.DisplayNameFor(model => model.Dni)
+            @Html.DisplayNameFor(model => model.Correo)
         </dt>
         <dd class = "col-6 ">
-            @Html.DisplayFor(model => model.Dni)
+            @Html.DisplayFor(model => model.Correo)
         </dd>
         <dt class = "col-6 ">
-            @Html.DisplayNameFor(model => model.Telefono)
+           ROL
         </dt>
-        <dd class = "col-6">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-6">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-6">
-            @Html.DisplayFor(model => model.Email)
+        <dd class = "col-6 ">
+            @Html.DisplayFor(model => model.Datos.rol)
         </dd>
         <dt class = "col-6 ">
-            @Html.DisplayNameFor(model => model.Domicilio)
+            AVATAR
         </dt>
         <dd class = "col-6">
-            @Html.DisplayFor(model => model.Domicilio)
-        </dd>
+          <img width="40" src="@Model.AvatarURL" alt="Avatar" />
+        </dd>   
     </dl>
 </div>
 <div>
