--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h4> Listado  de usuarios</h4>
+<h4> Listado  de Usuarios</h4>
 
 <p>
-    <a asp-action="Crear">CREAR NUEVO USUARIO</a>
+    <a asp-action="Crear">CREAR NUEVO </a>
 </p>
 <form asp-action="Index">
     <p>
@@ -29,10 +29,7 @@
                 @Html.DisplayNameFor(model => model.Apellido)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Correo)
-            </th>
-             <th>
-                @Html.DisplayNameFor(model => model.Avatar)
+                @Html.DisplayNameFor(model => model.AvatarFile)
             </th>
              <th>
                ACCIONES
@@ -54,10 +51,7 @@
                 </td>
               
                 <td>
-                    @Html.DisplayFor(modelItem => item.Correo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Avatar)
+                   	<img width="40" src="@item.AvatarURL" />
                 </td>
                 
                
@@ -65,15 +59,13 @@
                     <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
                     <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
                     <a href="#"onclick="eliminar('@item.Id', '@item.Nombre')" ><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
-                  
-                  
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
-<form class="modal" tabindex="-1" asp-action="Eliminar" id="modal_eliminar_usuario">
+<form class="modal" tabindex="-1" asp-action="Eliminar" id="modal_eliminar_Domicilio">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -83,8 +75,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <input type="hidden" name="Id" value="" id ="usuario_eliminar_id">
-        <p><span id="usuario_eliminar_nombre"></span></p>
+        <input type="hidden" name="Id" value="" id ="Domicilio_eliminar_id">
+        <p><span id="Domicilio_eliminar_nombre"></span></p>
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-danger" >Eliminar</button>
@@ -93,12 +85,13 @@
     </div>
   </div>
 </form>
+
 @section Scripts{
     <script>
         function eliminar(id, nombre){
-            document.querySelector("#usuario_eliminar_id").value = id;
-            document.querySelector("#usuario_eliminar_nombre").innerHTML = nombre;
-            $("#modal_eliminar_usuario").modal("show");
+            document.querySelector("#Domicilio_eliminar_id").value = id;
+            document.querySelector("#Domicilio_eliminar_nombre").innerHTML = nombre;
+            $("#modal_eliminar_Domicilio").modal("show");
         }
     </script>
 }
