--- a/Views/Usuario/Crear.cshtml
+++ b/Views/Usuario/Crear.cshtml
@@ -32,8 +32,7 @@
             </div>
              <div class="form-group col-4">
                 <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
+                <input asp-for="Clave" class="form-control" required />
             </div>
              <div class="form-group col-4">
                 <label asp-for="Rol" class="control-label"></label>
