--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -1,48 +1,14 @@
 @model Usuario
 @{
     ViewData["Title"] = "Usuario";
-      int id = Model == null? 0: Model.Id;
+    int id = Model == null ? 0 : Model.Id;
 }
-<h4>Usuario</h4>
+<h4>Editar Usuario</h4>
 <hr />
 <div class="row">
-    <div class="align-items-center "> 
-         <h5 class="text-center">Edita tu avatar</h5>
-       <div class= "col align-items-center ">
-         <form action="" enctype= "multipart/form-data">
-            <div class="form-group">
-				<label asp-for="AvatarURL" class="control-label"></label><br />
-				@if (Model.AvatarURL != "")
-				{
-					<img src="@Model.AvatarURL" width="30px"/>
-				}
-				else
-				{
-					<p>Sin avatar</p>
-				}
-			</div>
-              <div class="form-group">
-				<input type="file" name="AvatarFile" />
-				<span asp-validation-for="AvatarFile" class="text-danger"></span>
-			</div>
-            <div class="form-group">
-                <input type="submit" value="Cambiar" class="btn btn-success" />
-            </div>
-        </form>
-       </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-4">
-        <div class="col">
-                <h5 class="text-center">Edita tus datos</h5>
-            <form action="EditarDatos" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group col-6">
-                <label asp-for="Id" class="control-label" ></label>
-                <input asp-for="Id" class="form-control" value="@id" readonly />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+    <div class="col-8">
+        <form asp-action="Editar" enctype="multipart/form-data" method="post">
+            <input type="hidden" name="id" value="@Model.Id" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -59,20 +25,35 @@
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar datos personales" class="btn btn-success" />
+                <label asp-for="AvatarURL" class="control-label"></label><br />
+                @if (!string.IsNullOrEmpty(Model.AvatarURL))
+                {
+                    <img src="@Model.AvatarURL" width="30px" />
+                }
+                else
+                {
+                    <p>Sin avatar</p>
+                }
+            </div>
+            <div class="form-group">
+                <input type="file" name="AvatarFile" />
+                <span asp-validation-for="AvatarFile" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
-        </div>
     </div>
-    <div class="col-2"></div>
     <div class="col-4">
-          <h5 class="text-center">Edita tu contraseña</h5>
-        <div class="col">
-         <form action="">
+        <h5 class="text-center">Edita tu contraseña</h5>
+        <form asp-action="CambiarContraseña" method="post">
             <div class="form-group">
                 <label asp-for="Clave" class="control-label"></label>
                 <input asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
+                @if (Model.Id == 0) // Si el ID es 0, es una creación, no una edición
+                {
+                    <span class="text-danger">* Este campo es obligatorio para nuevos usuarios</span>
+                }
             </div>
             @if (User.IsInRole("Administrador") || User.IsInRole("SuperAdministrador"))
             {
@@ -91,11 +72,9 @@
                 <input type="submit" value="Cambiar" class="btn btn-success" />
             </div>
         </form>
-       </div>
     </div>
 </div>
-<br>
-<br>
+<br />
 <div>
-	<a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
