--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -65,6 +65,8 @@
                             id="edi"></i></a>
                     <a href="#" onclick="eliminar('@item.Id', '@item.Direccion')"><i class="fa fa-trash "
                             style="font-size:25px;" id="eli"></i></a>
+                    <a asp-controller="Contrato" asp-action="ListarContratosInmueble" asp-route-id=@item.Id><i class="fa fa-bars" style="font-size:25px;"
+                            id="lcontratos"></i></a>
                 </td>
             </tr>
         }
