--- a/Views/Usuario/Crear.cshtml
+++ b/Views/Usuario/Crear.cshtml
@@ -16,23 +16,23 @@
              <div asp-validation-summary="ModelOnly" class="text-danger"></div>
              <div class="form-group col-6">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control" required />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group col-6">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                <input asp-for="Apellido" class="form-control" required />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
            
             <div class="form-group col-4">
                 <label asp-for="Correo" class="control-label"></label>
-                <input asp-for="Correo" class="form-control" />
+                <input asp-for="Correo" class="form-control" required />
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
              <div class="form-group col-4">
                 <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" required />
+                <input asp-for="Clave" class="form-control"  required />
             </div>
              <div class="form-group col-4">
                 <label asp-for="Rol" class="control-label"></label>
