--- a/Views/Usuario/Detalles.cshtml
+++ b/Views/Usuario/Detalles.cshtml
@@ -44,7 +44,7 @@
             AVATAR
         </dt>
         <dd class = "col-6">
-          <img width="40" src="@Model.AvatarURL" alt="Avatar" />
+          <img width="40" src="@Model.AvatarURL" alt="Avatar" id="configImg"/>
         </dd>   
     </dl>
 </div>
