--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -6,56 +6,58 @@
 <h4>Editar Usuario</h4>
 <hr />
 <div class="row">
-    <div class="col-8">
+    <div class="col-6 " id ="table">
         <form asp-action="Editar" enctype="multipart/form-data" method="post">
             <input type="hidden" name="id" value="@Model.Id" />
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Correo" class="control-label"></label>
-                <input asp-for="Correo" class="form-control" />
-                <span asp-validation-for="Correo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+             <div class="form-group item-aligne.center">
                 <label asp-for="AvatarURL" class="control-label"></label><br />
                 @if (!string.IsNullOrEmpty(Model.AvatarURL))
                 {
-                    <img src="@Model.AvatarURL" width="30px" />
+                    <img src="@Model.AvatarURL" width="200px" height="200px" id="configImg" />
                 }
                 else
                 {
                     <p>Sin avatar</p>
                 }
             </div>
-            <div class="form-group">
+             <div class="form-group col-6">
                 <input type="file" name="AvatarFile" />
                 <span asp-validation-for="AvatarFile" class="text-danger"></span>
+            </div>
+            <div class="form-group col-6">
+                <label asp-for="Nombre" class="control-label"></label>
+                <input asp-for="Nombre" class="form-control" />
+                <span asp-validation-for="Nombre" class="text-danger"></span>
+            </div>
+            <div class="form-group col-6">
+                <label asp-for="Apellido" class="control-label"></label>
+                <input asp-for="Apellido" class="form-control" />
+                <span asp-validation-for="Apellido" class="text-danger"></span>
+            </div>
+            <div class="form-group col-6">
+                <label asp-for="Correo" class="control-label"></label>
+                <input asp-for="Correo" class="form-control" />
+                <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
     </div>
-    <div class="col-4">
-        <h5 class="text-center">Edita tu contraseña</h5>
-        <form asp-action="CambiarContraseña" method="post">
-            <div class="form-group">
+   
+    <div class="col-6"  id ="table">
+        <h5 class="text-left">Edita tu contraseña</h5>
+        <form asp-action="CambiarContraseña" method="post" class="row g-3">
+             <input type="hidden" name="id" value="@Model.Id" />
+            <div class="form-group col-6" >
                 <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
+                <input asp-for="Clave" class="form-control" required />
                 @if (Model.Id == 0) // Si el ID es 0, es una creación, no una edición
                 {
                     <span class="text-danger">* Este campo es obligatorio para nuevos usuarios</span>
                 }
             </div>
-            @if (User.IsInRole("Administrador") || User.IsInRole("SuperAdministrador"))
+            @if (User.IsInRole("Administrador"))
             {
                 <div class="form-group">
                     <label class="control-label">Rol</label>
