--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -51,7 +51,7 @@
                 </td>
               
                 <td>
-                   	<img width="40" src="@item.AvatarURL" />
+                   	<img width="40" height="40" src="@item.AvatarURL" id="configImg" />
                 </td>
                 
                
