--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -61,6 +61,7 @@
                 <a href="#"onclick="eliminar('@item.Id')" ><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
                 <a asp-controller="Pago" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-plus" style="font-size:25px;" id="agregar"></i></a>
                 <a asp-controller="Pago" asp-action="PagosContrato" asp-route-id="@item.Id"><i class="fa fa-bars" style="font-size:25px;" id="pagosC"></i></a>
+                <a asp-action="Renovar" asp-route-id=@item.Id><i class="fa fa-rotate-right" style="font-size:25px;" id="ren"></i></a>
             </td>
             </tr>
         }
