--- a/Views/Usuario/Crear.cshtml
+++ b/Views/Usuario/Crear.cshtml
@@ -49,7 +49,7 @@
 				<span asp-validation-for="AvatarFile" class="text-danger"></span>
 			</div>
            
-            <div class="form-group">
+            <div class="form-group p-3">
                 <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
