--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -39,7 +39,7 @@
                 <input asp-for="Correo" class="form-control" />
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group p-3" >
                 <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
@@ -53,7 +53,7 @@
                 <label asp-for="Clave" class="control-label"></label>
                 <input asp-for="Clave" class="form-control" required />
                 @if (Model.Id == 0) // Si el ID es 0, es una creación, no una edición
-                {
+                    {
                     <span class="text-danger">* Este campo es obligatorio para nuevos usuarios</span>
                 }
             </div>
@@ -78,5 +78,5 @@
 </div>
 <br />
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">volver al listado anterior</a>
 </div>
