--- a/Views/Propietario/Index.cshtml
+++ b/Views/Propietario/Index.cshtml
@@ -58,8 +58,12 @@
                 <td>
                     <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
                     <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
-                    <a href="#"onclick="eliminar('@item.Id', '@item.Nombre')" ><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
-                  
+                    @if (ViewBag.UserRole == "ADMINISTRADOR")
+                    {
+                        <a href="#" onclick="eliminar('@item.Id', '@item.Nombre')">
+                            <i class="fa fa-trash" style="font-size:25px;" id="eli"></i>
+                        </a>
+                    }
                   
                 </td>
             </tr>
@@ -81,7 +85,7 @@
         <p><span id="propietario_eliminar_nombre"></span></p>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-danger" >Eliminar</button>
+        <button type="submit" class="btn btn-danger">Eliminar</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Salir</button>
       </div>
     </div>
