--- a/Views/Inquilino/Index.cshtml
+++ b/Views/Inquilino/Index.cshtml
@@ -58,7 +58,12 @@
                 <td>
                     <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
                     <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
-                    <a href="#"onclick="eliminar('@item.Id', '@item.Nombre')" ><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
+                    @if (ViewBag.UserRole == "ADMINISTRADOR")
+                    {
+                        <a href="#" onclick="eliminar('@item.Id', '@item.Nombre')">
+                            <i class="fa fa-trash" style="font-size:25px;" id="eli"></i>
+                        </a>
+                    }
                   
                   
                 </td>
