--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -74,8 +74,12 @@
                             id="detalles"></i></a>
                     <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;"
                             id="edi"></i></a>
-                    <a href="#" onclick="eliminar('@item.Id')"><i class="fa fa-trash " style="font-size:25px;"
-                            id="eli"></i></a>
+                    @if (ViewBag.UserRole == "ADMINISTRADOR")
+                    {
+                        <a href="#" onclick="eliminar('@item.Id')">
+                            <i class="fa fa-trash" style="font-size:25px;" id="eli"></i>
+                        </a>
+                    }
                 </td>
             </tr>
         }
