Editar pagos solo modifica concepto

--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -95,6 +95,8 @@
 </form>
 
 @section Scripts{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    
     <script>
         function eliminar(id){
             document.querySelector("#Contrato_eliminar_id").value = id;
