--- a/Views/Pago/editar.cshtml
+++ b/Views/Pago/editar.cshtml
@@ -20,12 +20,20 @@
             </div>
             <div class="form-group col-2">
                 <label class="control-label">NÚMERO</label>
-                <input asp-for="Numero" class="form-control" />
+                @if(id > 0 ){
+                    <input asp-for="Numero" class="form-control" readonly />
+                } else {
+                    <input asp-for="Numero" class="form-control" />
+                }
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group col-5">
                 <label asp-for="Fecha" class="control-label"></label>
-                <input asp-for="Fecha" class="form-control" />
+                @if(id > 0){
+                    <input asp-for="Fecha" class="form-control" readonly />
+                } else {
+                    <input asp-for="Fecha" class="form-control" />
+                }
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
             <div class="form-group col-4">
@@ -35,7 +43,11 @@
             </div>
             <div class="form-group col-4">
                 <label asp-for="Importe" class="control-label"></label>
-                <input asp-for="Importe" class="control-label">
+                @if (id > 0 ){
+                    <input asp-for="Importe" class="control-label" readonly>
+                } else {
+                    <input asp-for="Importe" class="control-label">
+                }
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
             <div class="form-group col-4">
@@ -91,13 +103,13 @@
 <a asp-action="Index">Volver al listado</a>
 </div>
 
-<script src="path/to/select2.min.js"></script>
+<script src="~/lib/select2/select2.min.js"></script>
 <script>
     $(document).ready(function () {
         $('#selectContratos').select2();
     });
 </script>
-<script src="path/to/select2.min.js"></script>
+
 
 @section Scripts {
     @{
