Anulado logico de pagos

--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -90,7 +90,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">DESEAS ELIMINAR A:</h5>
+                <h5 class="modal-title">DESEAS ANULAR A:</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -100,7 +100,7 @@
                 <p><span id="Contrato_eliminar_id"></span></p>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-danger">Eliminar</button>
+                <button type="submit" class="btn btn-danger">Anular</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Salir</button>
             </div>
         </div>
