--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -10,9 +10,17 @@
 <p>
     <a asp-action="Editar" method="post">CREAR NUEVO </a>
 </p>
-<p>
-    <a asp-action="VerDisp"> Ver inmuebles disponibles </a>
-</p>
+<form asp-action="DisponiblesPorFechas" method="get">
+    <div class="form-group">
+        <label for="fechaInicio">Fecha Inicio:</label>
+        <input type="date" name="fechaInicio" class="form-control" required />
+    </div>
+    <div class="form-group">
+        <label for="fechaFin">Fecha Fin:</label>
+        <input type="date" name="fechaFin" class="form-control" required />
+    </div>
+    <button type="submit" class="btn btn-primary">Buscar Disponibles</button>
+</form>
 <form asp-action="BuscarPropietarios" method="get">
     <p>
         Buscar propietario: <input type="text" name="buscar" class="form-text" />
