--- a/Views/Inmueble/editar.cshtml
+++ b/Views/Inmueble/editar.cshtml
@@ -118,7 +118,7 @@
     <a asp-action="Index">Volver al listado</a>
 </div>
 
-<script src="path/to/select2.min.js"></script>
+<script src="~/lib/select2/select2.min.js"></script>
 <script>
 $(document).ready(function() {
     $('#selectPropietarios').select2();
