--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -56,17 +56,17 @@
                 @(item.Arrendatario.Nombre + " " + item.Arrendatario.Apellido)
             </td>
             <td>
-                <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
-                <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
+                <a asp-action="Detalles" asp-route-id=@item.Id title="Ver Detalles"><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
+                <a asp-action="Editar" asp-route-id=@item.Id title="Editar item"><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
                 @if (ViewBag.UserRole == "ADMINISTRADOR")
                     {
-                        <a href="#" onclick="eliminar('@item.Id')">
+                        <a href="#" onclick="eliminar('@item.Id')" title="Eliminar">
                             <i class="fa fa-trash" style="font-size:25px;" id="eli"></i>
                         </a>
                     }
-                <a asp-controller="Pago" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-plus" style="font-size:25px;" id="agregar"></i></a>
-                <a asp-controller="Pago" asp-action="PagosContrato" asp-route-id="@item.Id"><i class="fa fa-bars" style="font-size:25px;" id="pagosC"></i></a>
-                <a asp-action="Renovar" asp-route-id=@item.Id><i class="fa fa-rotate-right" style="font-size:25px;" id="ren"></i></a>
+                <a asp-controller="Pago" asp-action="Editar" asp-route-id="@item.Id" title="Agregar pago"><i class="fa fa-plus" style="font-size:25px;" id="agregar"></i></a>
+                <a asp-controller="Pago" asp-action="PagosContrato" asp-route-id="@item.Id" title="Listar Pagos"><i class="fa fa-bars" style="font-size:25px;" id="pagosC"></i></a>
+                <a asp-action="Renovar" asp-route-id=@item.Id title="Renovar contrato"><i class="fa fa-rotate-right" style="font-size:25px;" id="ren"></i></a>
             </td>
             </tr>
         }
