--- a/Views/Home/Loguin.cshtml
+++ b/Views/Home/Loguin.cshtml
@@ -17,14 +17,20 @@
             <form asp-action="Loguin" asp-controller="Usuario" method="post">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
-                    <input type="email" class="form-control" asp-for="Usuario">
+                    <input type="email" class="form-control" asp-for="Usuario" required>
                     
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" asp-for="Clave">
+                    <input type="password" class="form-control" asp-for="Clave" required>
+                    
                 </div>
-                
+                @if(ViewBag.Error != null)
+                {
+                    <div class="alert alert-danger col-4 "  >
+                        @ViewBag.Error
+                    </div>
+                }
                 <button type="submit" class="btn btn-success">Ingresar</button>
             </form>
         </div>
