--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -67,17 +67,17 @@
 
 
                 <td>
-                    <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;"
+                    <a asp-action="Detalles" asp-route-id=@item.Id title="Ver Detalles"><i class="fa fa-eye " style="font-size:25px;"
                             id="detalles"></i></a>
-                    <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;"
+                    <a asp-action="Editar" asp-route-id=@item.Id title="Editar item"><i class="fa fa-pencil " style="font-size:25px;"
                             id="edi"></i></a>
                     @if (ViewBag.UserRole == "ADMINISTRADOR")
                     {
-                        <a href="#" onclick="eliminar('@item.Id', '@item.Direccion')">
+                        <a href="#" onclick="eliminar('@item.Id', '@item.Direccion')" title="Eliminar">
                             <i class="fa fa-trash" style="font-size:25px;" id="eli"></i>
                         </a>
                     }
-                    <a asp-controller="Contrato" asp-action="ListarContratosInmueble" asp-route-id=@item.Id><i class="fa fa-bars" style="font-size:25px;"
+                    <a asp-controller="Contrato" asp-action="ListarContratosInmueble" asp-route-id=@item.Id title="Listar Contratos"><i class="fa fa-bars" style="font-size:25px;"
                             id="lcontratos"></i></a>
                 </td>
             </tr>
