--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     <a asp-action="Crear">CREAR NUEVO </a>
 </p>
-<form asp-action="Index">
+<form asp-action="BuscarUsuario">
     <p>
         Buscar: <input type="text" name="buscar" class="form-text" />
         <input type="submit" value="buscar" class="btn btn-dark" >
